--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: [2.7, 3.7]
+        python-version: [3.6]
         
     steps:
       - uses: actions/checkout@v2
@@ -25,7 +25,7 @@ jobs:
           echo "CONDA_CHANNELS=conda-forge" >> $GITHUB_ENV;
           echo "CONDA_CHANNEL_PRIORITY=True" >> $GITHUB_ENV;
           echo "TWINE_USERNAME=dhoese" >> $GITHUB_ENV;
-          echo "BUILDMODE=ASTROPY" >> $GITHUB_ENV;
+          echo "BUILDMODE=CIBUILDWHEEL" >> $GITHUB_ENV;
           echo "CIBW_TEST_COMMAND=python {project}/selftest.py" >> $GITHUB_ENV;
           echo "CIBW_BEFORE_BUILD_LINUX=yum install -y freetype-devel" >> $GITHUB_ENV;
           echo "CIBW_SKIP=cp34-* cp35-* cp39-* pp27-* pp36-*" >> $GITHUB_ENV;
