--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
           echo "BUILDMODE=CIBUILDWHEEL" >> $GITHUB_ENV;
           echo "CIBW_TEST_COMMAND=python {project}/selftest.py" >> $GITHUB_ENV;
           echo "CIBW_BEFORE_BUILD_LINUX=yum install -y freetype-devel" >> $GITHUB_ENV;
+          echo "CIBW_BEFORE_TEST=yum install -y libjpeg-dev zlib1g-dev" >> $GITHUB_ENV;
           echo "CIBW_SKIP=cp34-* cp35-* cp39-* pp27-* pp36-*" >> $GITHUB_ENV;
           echo "CIBW_TEST_REQUIRES=numpy pillow pytest" >> $GITHUB_ENV;
 
