--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
           echo "CIBW_BEFORE_TEST=yum update && yum install -y libjpeg-devel" >> $GITHUB_ENV;
           echo "CIBW_SKIP=cp34-* cp35-* cp39-* pp27-* pp36-* pp37-*" >> $GITHUB_ENV;
           echo "CIBW_TEST_REQUIRES=numpy pillow pytest" >> $GITHUB_ENV;
+          echo "CIBW_ARCHS_LINUX=aarch64" >> $GITHUB_ENV;
 
       - name: Run install script
         run: source ci/travis-install.sh
