--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up QEMU
-        if: ${{ matrix.arch }} == 'aarch64'
+        if: ${{ matrix.os }} == 'ubuntu-latest'
         id: qemu
         uses: docker/setup-qemu-action@v1
 
@@ -34,7 +34,7 @@ jobs:
           echo "CIBW_TEST_COMMAND=python {project}/selftest.py" >> $GITHUB_ENV;
           echo "CIBW_BEFORE_BUILD_LINUX=yum install -y freetype-devel" >> $GITHUB_ENV;
           #echo "CIBW_BEFORE_TEST=yum update && yum install -y libjpeg-devel" >> $GITHUB_ENV;
-          echo "CIBW_SKIP=cp34-* cp35-* pp27-* pp36-* pp37-* pp38-* *-musllinux_aarch64" >> $GITHUB_ENV;
+          echo "CIBW_SKIP=cp34-* cp35-* pp27-* pp36-* pp37-* pp38-* *-musllinux_*" >> $GITHUB_ENV;
           echo "CIBW_TEST_REQUIRES=numpy pillow pytest" >> $GITHUB_ENV;
           echo "CIBW_ARCHS_LINUX=auto aarch64" >> $GITHUB_ENV;
 
