--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
         id: qemu
         uses: docker/setup-qemu-action@v1
 
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.2.2
+
       - name: Set BUILDMODE
         run: |
           if [ "CIBUILDWHEEL" == "${{ matrix.BUILDMODE }}" ]; then
