--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/setup-qemu-action@v1
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.2.2
+        run: python -m pip install cibuildwheel
 
       - name: Set BUILDMODE
         run: |
