--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macOS-10.15]
+        os: [ubuntu-latest, macos-latest]
         BUILDMODE: [CIBUILDWHEEL, ASTROPY]
         
     steps:
@@ -20,9 +20,6 @@ jobs:
         if: ${{ matrix.os == 'ubuntu-latest' }}
         id: qemu
         uses: docker/setup-qemu-action@v1
-
-      - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel
 
       - name: Set BUILDMODE
         run: |
