--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions/setup-python@v2
+      #- uses: actions/setup-python@v2
 
       - name: Set up QEMU
         if: ${{ matrix.os == 'ubuntu-latest' }}
