--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,23 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      #- uses: actions/setup-python@v2
+      - uses: actions/setup-python@v2
 
       - name: Set up QEMU
         if: ${{ matrix.os == 'ubuntu-latest' }}
         id: qemu
         uses: docker/setup-qemu-action@v1
+
+      - name: Setup Conda Environment
+        if: ${{ matrix.BUILDMODE == 'ASTROPY' }}
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          miniforge-variant: Mambaforge
+          miniforge-version: latest
+          use-mamba: true
+          python-version: ${{ matrix.python-version }}
+          environment-file: continuous_integration/environment.yaml
+          activate-environment: test-environment
 
       - name: Set BUILDMODE
         run: |
