--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,6 +64,7 @@ jobs:
 
       - name: Run a build script
         if: ${{ matrix.BUILDMODE == 'ASTROPY' }}
+        shell: bash -l {0}
         run: python selftest.py
 
       - name: Run a build script
