--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,10 +62,12 @@ jobs:
         if: ${{ matrix.BUILDMODE == 'CIBUILDWHEEL' }}
         run: source ci/travis-install.sh
 
-      #- name: Run a build script
-      #  if: ${{ matrix.BUILDMODE == 'ASTROPY' }}
-      #  shell: bash -l {0}
-      #  run: python selftest.py
+      - name: Run tests
+        if: ${{ matrix.BUILDMODE == 'ASTROPY' }}
+        shell: bash -l {0}
+        run: |
+          pip install -e .
+          python selftest.py
 
       - name: Run a build script
         if: ${{ matrix.BUILDMODE == 'ASTROPY' }}
