--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,6 @@ jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
         BUILDMODE: [CIBUILDWHEEL, ASTROPY]
@@ -17,7 +16,7 @@ jobs:
       - uses: actions/setup-python@v2
 
       - name: Set up QEMU
-        if: ${{ matrix.os == 'ubuntu-latest' }}
+        if: ${{ matrix.os == 'ubuntu-latest' && matrix.BUILDMODE == 'CIBUILDWHEEL' }}
         id: qemu
         uses: docker/setup-qemu-action@v1
 
