--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,3 +50,25 @@ jobs:
           python -m pip install cibuildwheel
           #ci/travis-build.sh
           cibuildwheel --output-dir wheelhouse
+  publish:
+    #if: startsWith(github.ref, 'refs/tags')
+    runs-on: ubuntu-latest
+    needs: 
+       - build
+    steps:
+      - uses: actions/checkout@v2
+      
+      - uses: actions/setup-python@v2
+      
+      - name: sdist 
+        run: python setup.py sdist
+
+      - run: ls -l dist/*
+
+      - run: ls -l wheelhouse/*
+
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: ${{ secrets.PYPI_USERNAME }}
+          password: ${{ secrets.PYPI_PASSWORD }}
