--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,7 @@ jobs:
           python -m pip install cibuildwheel
           #ci/travis-build.sh
           cibuildwheel --output-dir wheelhouse
+      - run: ls -l wheelhouse/*
   publish:
     #if: startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
@@ -64,6 +65,8 @@ jobs:
         run: python setup.py sdist
 
       - run: ls -l dist/*
+
+      - run: find . -name "*.whl"
 
       - run: ls -l wheelhouse/*
 
