--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,9 @@ jobs:
           python -m pip install cibuildwheel
           #ci/travis-build.sh
           cibuildwheel --output-dir wheelhouse
-      - run: ls -l wheelhouse/*
+      - name: check wheel
+        if: ${{ matrix.BUILDMODE == 'CIBUILDWHEEL' }}
+        run: ls -l wheelhouse/*
   publish:
     #if: startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
