--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,12 @@ jobs:
           #ci/travis-build.sh
           cibuildwheel --output-dir wheelhouse
 
+      - name: upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: wheelhouse
+          path: "wheelhouse/*.whl"
+
   publish:
     #if: startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
@@ -65,6 +71,8 @@ jobs:
       #  run: python setup.py sdist
 
       #- run: ls -l dist/*
+      - name: download
+        uses: actions/download-artifact@v2
 
       - run: find . -name "*.whl"
 
