--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,11 +70,10 @@ jobs:
       #- name: sdist 
       #  run: python setup.py sdist
 
-      #- run: ls -l dist/*
       - name: download
         uses: actions/download-artifact@v2
 
-      - name: Publish to PyPI
+      - name: Publish wheels to PyPI
         run: |
-          #python -m pip install twine
+          python -m pip install twine
           python -m twine upload --skip-existing wheelhouse/*.whl
