--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,8 +67,8 @@ jobs:
       
       - uses: actions/setup-python@v2
       
-      #- name: sdist 
-      #  run: python setup.py sdist
+      - name: sdist
+        run: python setup.py sdist
 
       - name: download
         uses: actions/download-artifact@v2
@@ -79,4 +79,5 @@ jobs:
           TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
           python -m pip install twine
+          python -m twine upload --skip-existing dist/*.tar.gz
           python -m twine upload --skip-existing wheelhouse/*.whl
