--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,13 +52,14 @@ jobs:
           cibuildwheel --output-dir wheelhouse
 
       - name: upload
+        if: ${{ matrix.BUILDMODE == 'CIBUILDWHEEL' }}
         uses: actions/upload-artifact@v2
         with:
           name: wheelhouse
           path: "wheelhouse/*.whl"
 
   publish:
-    #if: startsWith(github.ref, 'refs/tags')
+    if: startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs: 
        - build
